# ansible-dev

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
conf/ssh/: config
inventory/: kube.inv  systemd.inv  test.inv
playbooks/: ca.yml  machine.yml
playbooks/open-iscsi/: aggregate.yml  auto_startup.yml  init.yml
playbooks/systemd-resolved/: dns_resolution.yml
